add new css file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/new.css">
     <title>Firework show</title>
 </head>
 
@@ -21,21 +22,36 @@
         </nav>
     </header>
     <main>
+        <!-- introduction -->
         <article>
             <h1>Firework show</h1>
             <p>customize your own firework</p>
         </article>
-        <div>
-            <!-- firework line -->
-            <div></div>
-            <!-- outer boem -->
-            <div>
-                <!-- inner boem -->
-                <div></div>
-
-                <!--  -->
-            </div>
-        </div>
+        <!-- firework customizing -->
+        <article>
+            <section>
+                <!-- first part -->
+                <section>
+                    <div></div>
+                </section>
+                <!-- first boom -->
+                <section>
+                    <!-- wrapper -->
+                    <section>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </section>
+                </section>
+                <!-- second boom -->
+                <section></section>
+            </section>
+        </article>
     </main>
 </body>
 
