--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Squada+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/new.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/vuurwerk.css">
     <title>Firework show</title>
 </head>
 
 <body>
     <header>
-        <h1>Firework show</h1>
+        <h1>
+            <span>f</span>
+            <span>i</span>
+            <span>r</span>
+            <span>e</span>
+            <span>w</span>
+            <span>o</span>
+            <span>r</span>
+            <span>k</span>
+            
+        </h1>        
         <p>customize your own firework</p>
         <div>
             <label for="customize">customize</label>
