--- a/index.html
+++ b/index.html
@@ -245,6 +245,6 @@
         </section>
     </footer>
 </body>
-<script src="/js/tinybitofjs.js"></script>
+<script src="js/tinybitofjs.js"></script>
 
 </html>
